# source_inspect

./: .appveyor.yml  CMakeLists.txt  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: index.rst
src/: main.cpp
tests/: getline.py
